--- a/code/style.css
+++ b/code/style.css
@@ -101,7 +101,7 @@ a:hover, a:active {
   padding: 5px;
 }
 
-.big-picture {
+.frontpage-picture {
   max-width: 100%;
   height: auto;
   margin-bottom: 20px;
@@ -149,7 +149,6 @@ a:hover, a:active {
 }
 
 .article-container h2 {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 11px;
   font-weight: 400;
 }
@@ -214,7 +213,6 @@ a:hover, a:active {
 
 @media (min-width: 1025px) {
   header {
-    display: flex;
     justify-content: space-between;
   }
 
