--- a/code/style.css
+++ b/code/style.css
@@ -1,33 +1,35 @@
-html, body {
+html,
+body {
   height: 100%;
   width: 100%;
   background: #e6dfd8;
   color: #312f2d;
-  font-family: 'Arapey', serif;
+  font-family: "Arapey", serif;
   font-weight: lighter;
   overflow-x: hidden;
 }
 /***NAVIGATION***/
 .navbar {
-  background: #e6dfd8;
-  padding: 1% 2%;
+  background: #e9e0d7;
+  padding: 2% 2%;
   letter-spacing: 2px;
   font-size: 16px;
   border: none;
+  justify-content: space-evenly;
+  display: column;
 }
 .navbar-brand {
-  padding: 1% 2%;
+  min-height: 55px;
+  padding: 0 5px 0;
   size: 10px;
-}
-.navbar-brand img {
-  padding-top: 0;
- 
-  margin-left: 120px;
+  position: fixed;
+  z-index: 1;
 }
 .navbar-default .navbar-nav li a {
   color: #312f2d;
 }
-.navbar-default .navbar-nav li a:hover, .navbar-default .navbar-nav li a.active {
+.navbar-default .navbar-nav li a:hover,
+.navbar-default .navbar-nav li a.active {
   color: black;
 }
 .header {
@@ -51,7 +53,6 @@ html, body {
   place-items: center;
   align-content: left;
 }
-
 .h1 {
   text-align: center;
   color: #312f2d;
@@ -67,16 +68,14 @@ html, body {
   border: 2px solid #ccbeb4;
   background-color: #ddd3cc;
 }
-
 .row {
   margin-top: 100px;
 }
 .row p {
   text-align: left;
-  font-family: 'Arapey', serif;
+  font-family: "Arapey", serif;
   font-weight: lighter;
   font-size: 19px;
-  
 }
 h3 {
   text-align: left;
@@ -87,7 +86,6 @@ h3 {
   margin-top: 15px;
   margin-bottom: 5px;
 }
-
 .row h3 {
   padding-bottom: 50px;
   padding-top: -20px;
@@ -101,11 +99,9 @@ h3 {
   margin: 0 auto;
   width: 100%;
 }
-
 .container img {
   padding-bottom: 30px;
 }
-
 .news-container {
   padding-top: 50px;
   padding-bottom: 105px;
@@ -142,14 +138,12 @@ h3 {
   flex-direction: row;
   justify-content: space-evenly;
   flex-wrap: wrap;
-  /* flex: 25%;
-  max-width: 25%;  */
+  flex: 25%;
+  max-width: 25%;
   text-align: left;
   padding: 25px 12px;
-  /* vertical-align: middle;  */
   width: 100%;
   height: 100%;
-  /* border: 5px solid; */
 }
 .card-container .container {
   position: relative;
@@ -159,7 +153,7 @@ h3 {
   align-items: center;
   justify-content: space-evenly;
 }
-.card img{
+.card img {
   border: 1px solid #e6dfd8;
   box-shadow: 5px 5px 5px #ccbeb4;
   -webkit-box-shadow: 5px 5px 5px #ccbeb4;
@@ -175,7 +169,8 @@ h3 {
 .card h6 {
   text-align: left;
 }
-.card p, h4 {
+.card p,
+h4 {
   text-align: left;
 }
 .btn-primary {
@@ -198,22 +193,20 @@ h3 {
   position: relative;
 }
 .last-container p {
- text-align: left;
- font-size: 20px;
- font-weight: 400;
+  text-align: left;
+  font-size: 20px;
+  font-weight: 400;
 }
 
 .last-row {
   display: row;
   flex-wrap: wrap;
-
 }
-
 .hr-last {
   width: 10%;
   border-color: #312f2d;
 }
-.h3-last h3{
+.h3-last h3 {
   text-align: center;
   font-size: 40px;
   font-weight: 500;
@@ -235,93 +228,167 @@ hr {
   display: flex;
   flex-wrap: wrap;
   overflow: hidden;
+  margin-bottom: 30px;
   align-items: center;
   justify-content: space-evenly;
   position: relative;
 }
 h5 {
   font-size: 12px;
-  font-family: 'Arapey', serif;
+  font-family: "Arapey", serif;
   font-weight: lighter;
 }
 
 /* MEDIA QUERIES */
-@media (min-width: 320px) and (max-width: 768px){
+@media (max-width: 768px) {
   .landing-img {
     width: 100%;
     height: 100%;
     display: grid;
     place-items: center;
-    margin: 0 auto;  
+    margin: 0 auto;
   }
   .h1 {
-  text-align: center;
-  color: #312f2d;
-  place-items: center;
-  margin: 0 auto;
-  font-size: 20px;
-  font-style: bolder;
-  letter-spacing: 5px;
-  font-weight: 500;
-  line-height: 1;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  border: 1px solid #312f2d;
-  background-color: #e6dfd8;
+    text-align: center;
+    color: #312f2d;
+    place-items: center;
+    margin: 0 auto;
+    font-size: 20px;
+    font-style: bolder;
+    letter-spacing: 5px;
+    font-weight: 500;
+    line-height: 1;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    border: 1px solid #312f2d;
+    background-color: #e6dfd8;
+  }
+  .landing-img {
+    padding-top: 20px;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
+  .news-container {
+    padding: 0;
+  }
+  .news-container img {
+    width: 100%;
+    border: none;
+  }
+  .news-container .btn {
+    font-size: 12px;
+    display: block;
+    margin-bottom: 5px;
+  }
+  h3 {
+    text-align: center;
+    font-style: italic;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.2;
+  }
+  .news-container p {
+    font-size: 14px;
+  }
+  .btn {
+    font-size: 12px;
+    border-radius: 0.5px;
+  }
+  .navbar-brand {
+    display: none;
+  }
+  .h1-news h1 {
+    text-align: left;
+    padding: 5px 5px 5px 100px;
+    font-size: 30px;
+  }
+  h6 {
+    font-size: 12px;
+  }
+  .footer {
+    background-color: #e5ded7;
+    display: block;
+    flex-wrap: nowrap;
+    overflow: hidden;
+    align-items: center;
+    justify-content: space-between;
+    position: relative;
+  }
 }
-.landing-img {
-  padding-top: 20px;
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-}
-.news-container {
-  padding: 0;
-}
-.news-container img {
-width: 100%;
-border: none;
-}
-.news-container .btn {
-font-size: 12px;
-display: block;
-margin-bottom: 5px;
-}
-h3 {
-  text-align: center;
-  font-style: italic;
-  font-size: 20px;
-  font-weight: 500;
-  line-height: 1.2;
-}
-.news-container p {
-  font-size: 14px;
-}
-.btn {
-  font-size: 12px;
-  border-radius: 0.5px;
-}
-/* .last-container {
-  display: none;
-} */
-.navbar-brand {
-  display: none;
-}
-.h1-news h1{
-  text-align: left;
-  padding: 5px 5px 5px 100px;
-  font-size: 10px;
-}
-h6 {
-  font-size: 12px;
-}
-.footer {
-  background-color: #e5ded7;
-  display: row;
-  flex-wrap: nowrap;
-  overflow: hidden;
-  align-items: center;
-  justify-content: space-between;
-  position: relative;
-}
+@media (min-width: 768px) and (max-width: 1024px) {
+  .landing-img {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    place-items: center;
+    margin: 0 auto;
+  }
+  .h1 {
+    text-align: center;
+    color: #312f2d;
+    place-items: center;
+    margin: 0 auto;
+    font-size: 20px;
+    font-style: bolder;
+    letter-spacing: 5px;
+    font-weight: 500;
+    line-height: 1;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    border: 1px solid #312f2d;
+    background-color: #e6dfd8;
+  }
+  .landing-img {
+    padding-top: 20px;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
+  .news-container {
+    padding: 0;
+  }
+  .news-container img {
+    width: 100%;
+    border: none;
+  }
+  .news-container .btn {
+    font-size: 12px;
+    display: block;
+    margin-bottom: 5px;
+  }
+  h3 {
+    text-align: center;
+    font-style: italic;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.2;
+  }
+  .news-container p {
+    font-size: 14px;
+  }
+  .btn {
+    font-size: 12px;
+    border-radius: 0.5px;
+  }
+  .navbar-brand {
+    display: none;
+  }
+  .h1-news h1 {
+    text-align: left;
+    padding: 5px 5px 5px 100px;
+    font-size: 30px;
+  }
+  h6 {
+    font-size: 12px;
+  }
+  .footer {
+    background-color: #e5ded7;
+    display: block;
+    flex-wrap: nowrap;
+    overflow: hidden;
+    align-items: center;
+    justify-content: space-between;
+    position: relative;
+  }
 }
