--- a/code/style.css
+++ b/code/style.css
@@ -50,21 +50,26 @@ header {
 }
 
 nav {
-  display: none;
-  margin: 10px;
+  display: none;      
+  /* margin: 10px; */
   width: 80%;
   flex-direction: row;
   justify-content: space-evenly;
+  align-items: center;
 }
 
+/*
 nav div {
   display: flex;
-  width: 30%;
   justify-content: space-between;
-}
-
+} */
 
 .logo {
+  width: 250px;
+  height: 75px;
+}
+
+.logo-tablet {
   width: 250px;
   height: 75px;
 }
@@ -75,6 +80,7 @@ a {
   font-weight: bold;
   font-size: 13px;
   text-transform: uppercase;
+  margin: 20px;
 }
 
 nav a:hover{
@@ -232,9 +238,7 @@ footer {
 
 footer p {
   color: white;
-  /* font-weight: bold; */
   font-size: 13px;
-  /* text-transform: uppercase; */
 }
 
 /*** PHONE ***/
@@ -294,6 +298,11 @@ footer p {
     align-items: center;
   }
 
+  .logo{
+   display: none;
+
+  }
+
   .hamburger {
     display:none;
   }
@@ -308,25 +317,16 @@ footer p {
   nav div {
     justify-content: space-evenly;
   }
-
+/*
   .logo {
     position: absolute;
+  }*/
+/*
+  .header-content :nth-child(1) {
+    display: none;
   }
+  */
 
-  /*
-
-  .nav-first {
-    order: 1;
-  }
-
-  .nav-second {
-    order: 3;
-  }
-
-  .logo {
-    order: 2;
-  }
-*/
   .smallArticle {
     width: 43%; 
   }
@@ -339,6 +339,8 @@ footer p {
 /*** DESKTOP ***/
 
 @media (min-width: 1025px) {
+
+/*HEADER*/ 
 
   header {
     flex-direction: row;
@@ -353,43 +355,32 @@ footer p {
   nav {
     display: flex; 
     width: 50%;
-    justify-content: center;
   }
 
   nav div a {
-    margin-left: 20px;
+    /* margin-left: 20px; */
     padding: 0px;
   }
 
   nav div {
-    margin-left: 20px;
+    /* margin-left: 20px; */
   }
 
   .logo {
+    display: block;
     position: relative;
-    margin: 0px 20px;
-  }
-/*
-  .nav-first {
-    order: 2;
-    justify-content: space-between;
-    flex-grow: 2;
+    margin: 0px 0px;
   }
 
-  .nav-second {
-    order: 3;
-    justify-content: space-between;
-    flex-grow: 0;
-  }
-
-  .logo {
-    order: 1;
-    flex-grow: 0;
-  }
-*/
   nav a {
     font-size: 15px;
   }
+
+  nav :nth-child(3) {
+    display: none;
+  }
+
+  /* MAIN */
 
   .big-news {
     width: 65%;
@@ -470,6 +461,8 @@ footer p {
   right: 0px;
   bottom: 0px;
   }
+
+  /*FOOTER*/
 
   .footer-content {
     width: 65%;
