--- a/code/style.css
+++ b/code/style.css
@@ -6,140 +6,21 @@ When scrolling and navbar visable it covers other section.
 -Animation on images "figure". Span2 before and after the lines
 are black to start with to end up white as I want them to be.
 
-- social icons in footer. when hovering everything "jumps" around...
-
 */
 
 
-*{
+* {
   margin: 0;
   padding:0;
+  box-sizing: border-box;
 }
 
 body     {
-  padding-top: 80px;
+  /*padding-top: 150px;*/
   
 }
 
-header {
-  text-align: center;
-  position: absolute; /* had fixed last together with padding top in margin. changed from absolute since that covered first section */
-  top: 0;
-  left: 0;
-  right:0;
-  background: black;
-}
-
-.toggler { 
-  display: none;
-}
-
-.logo {
-  display: flex;
-  width: 90px;
-  height: 90px;
-  margin-left: 16px; 
-}
-
-nav ul {
-  position: fixed;
-  width: 100%;
-  height: 50vh;
-  background: black;    
-  left: -100%;
-  transition: all 1s;
-  list-style: none;
-}
-
-nav li {
-  margin: 20px;
-  text-align: right;
-}
-
-nav a {
-  color: lightgrey;
-  text-decoration: none;
-  font-size: 20px;
-  text-transform: uppercase;
-  padding: 16px;
-  border: 3px;
-  border-radius: 2px;
-
-}
-
-nav a:hover {
-  color: grey;
-  background-color: white;
-  transition: ease-in .1s;
-}
-
-.toggler:checked ~ nav ul {
-  left: 0;
-}
-
-.burger {
-  position: absolute;
-  font-size: 35px;
-  color: lightgrey;
-  top: 0;
-  right: 16px;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  cursor: pointer;
-
-}
-
-
-/*tablet media Query */
-
-@media (min-width: 768px) and (max-width: 1024px) {
-  .burger {
-      font-size: 40px;
-  }
-}
-
-
-/* desktop media query */ 
-
-@media (min-width: 1024px) {
-  .burger {
-      display: none;
-  }
-
-  header {
-      display: grid;
-      grid-template-columns: 1fr auto minmax(700px, 3fr);
-  }
-
-
-  nav {
-      display: flex;
-      grid-column: 3/4;
-      justify-content: flex-end;
-      align-items: center;
-  }
-
-
-  nav ul {
-      all: unset; /*to unset previous nav ul code */
-      list-style: none; 
-      display: flex;
-      position: absolute;
-  }
-
-  nav li {
-     padding: 10px;
-  }
-
-  nav a {
-      font-size: 24px;
-  }
-}
-
-
-
- h1 {
+h1 {
   margin: 50px 25px 50px;
   font-weight: 400;
 }
@@ -148,6 +29,75 @@ h2 {
   margin: 50px 25px 50px;
   font-weight: 300;
 }
+
+h3 {
+  color: white;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 40%;
+  text-align: center;
+  opacity: 0;
+  transition: all ease 2s;
+  font-size: 30px;
+}
+
+p {
+  font-size: 16px;
+}
+
+/****HEADER***/
+
+header {
+  background: #000000;
+  height: 150px;
+  display: flex;
+  align-items: center;
+  padding: 0 16px;
+  justify-content: space-between;
+}
+
+.hamburger {
+  display: flex;
+  width: 30px;
+  height: 30px; 
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.hamburger div {
+  width: 30px;
+  height: 4px;
+  background: white;
+  border-radius: 2px;
+}
+
+header img {
+  width: 180px;
+}
+
+nav {
+ display: none;
+
+}
+
+nav a {
+  color: #ffffff;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: 400;
+  font-size: 20px;
+  padding: 10px;
+  border: 3px;
+  border-radius: 2px;
+}
+
+nav a:hover {
+  color: grey;
+  background-color: white;
+  transition: ease-in .1s;
+}
+
 
 main h2 {
   border-top: 2px solid lightgrey;
@@ -181,48 +131,12 @@ main h2 {
 
 .image img {
     width: 100%;
+    box-shadow: 0 0 20px lightgrey;
+
 }
 
 
-
-/* MEDIA QUERT TO ALIGN PICTURES IN COLUMN WHEN SCREEN IS LARGER THAN 667px BUT
-SMALLER THAN 1024px */
-
-@media (min-width: 768px) and (max-width: 1024px) {
-  .image {
-      width: 40%;
-      flex-grow: 2
-  }
-
-  .text {
-      width: 40%
-  }
-  
-}
-
-/* MEDIA QUERT TO ALIGN PICTURES IN COLUMN WHEN SCREEN LARGER THAN 1024px */
-
-@media (min-width: 1024px) {
-  .image {
-      width: 40%;
-      flex-grow: 2;
-      margin-left: 40px; 
-  }
-
-  .text {
-      width: 40%
-  }
-
-  .click-mobiletablet {
-    display:none;
-  }
-
-  .hover-desktop {
-    display: block;
-  }
-  
-} 
-/* STYLING OF SECTOND SECTION CONTAINING 8 IMAGES */
+/* smallNews SECTION STYLING */
 
 .smallNews-parent {
   display: flex;
@@ -230,38 +144,28 @@ SMALLER THAN 1024px */
   height: 100%;
   justify-content: center;
   flex-wrap: wrap;
+  margin-bottom: 30px;
 }
 
 .figure {
-  margin: 5px;
+  margin-right: 5px;
   width: 60%;
+  height: 100%;
   align-self: center; 
   position: relative;
   box-shadow: 0 0 20px lightgrey;
 }
 
-/*styling for img in first and second section*/
 
 .smallNews-image {
   width: 100%;
-  height: 90%;
+  /*height: 90%; */
   justify-content: center;
   align-self: center;
-  
 }
 
 
-h3 {
-  color: white;
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 40%;
-  text-align: center;
-  opacity: 0;
-  transition: all ease 2s;
-  font-size: 30px;
-}
+
 
 .figure:hover h3 {
   opacity: 1;
@@ -364,41 +268,9 @@ h3 {
 }
 
 
-
-/*Tablet media query*/
-
-@media (min-width: 768px) and (max-width: 1024px) {
-  .figure {
-      flex-basis: 40%;
-  }
-
-  h3 {
-    font-size: 32px;
-  }
-}
-
-/*desktop media query*/
-
-@media (min-width: 1025px) {
-  .smallNews-parent {
-      flex-direction: row;
-      flex-wrap: wrap;
-  }
-
-  .figure {
-      flex-basis: 20%;
-  }
-
-  h3 {
-    font-size: 28px;
-  }
-
-}
-
 footer {
   background: #000000;
   color: #ffffff;
-  height: 30px;
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
@@ -425,6 +297,80 @@ footer i {
 
 footer i:hover {
   color: grey;
-  padding: 5px;
 }
 
+/***** MEDIA QUERIES TABLET ******/
+
+@media (min-width: 768px) {
+  nav {
+    display: inline-block;
+  }
+
+  .hamburger {
+    display: none;
+  }
+
+  .image {
+    width: 40%;
+    flex-grow: 2
+  }
+
+  .text {
+    width: 40%
+  }
+
+  .figure {
+  flex-basis: 40%;
+  }
+
+  h3 {
+  font-size: 32px;
+  }
+
+  p {
+    font-size: 18px;
+  }
+
+}
+
+
+/* MEDIA QUERIES DESKTOP */
+
+@media (min-width: 1024px) {
+  .image {
+      width: 40%;
+      flex-grow: 2;
+      margin-left: 40px; 
+  }
+
+  .text {
+      width: 40%;
+      margin-right: 40px;
+  }
+
+  .click-mobiletablet {
+    display:none;
+  }
+
+  .hover-desktop {
+    display: block;
+  }
+
+  .smallNews-parent {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  .figure {
+    flex-basis: 20%;
+  }
+
+  h3 {
+  font-size: 28px;
+  }
+
+  p {
+    font-size: 20px;
+  }
+  
+} 
