--- a/code/style.css
+++ b/code/style.css
@@ -24,8 +24,8 @@ header:hover {
 nav a  {
   text-decoration: none;
   color: #727768;
-  margin: 16px;
-  padding: 30px 30px;
+  margin: 10px;
+  padding: 10px 10px;
   font-size: 20px;
   float: right;
 }
@@ -68,7 +68,7 @@ h1 {
 }
 .plants > h4 {
   text-align: center;
-  margin: 70px;
+  margin: 70px 0px 70px 0px;
   font-size: 20px;
   border: 1px solid #a3a37d;
   padding: 15px;
