--- a/code/style.css
+++ b/code/style.css
@@ -56,7 +56,7 @@ nav {
 .bignews-img img {
   width: 500px;
   max-width: 100%;
-  max-height: 100%
+  max-height: 100%;
   height: auto;
   margin-left: auto;
   margin-right: auto;
