--- a/code/style.css
+++ b/code/style.css
@@ -1,161 +1,150 @@
-                                                                    Body {
-                                                                        background: #d9e6f2;
-                                                                        margin: 0;
-                                                                    }
-                                                                    /* For screens smaller than 667px */
-                                                                    /*Header*/
-                                                                    
-                                                                    header {
-                                                                        background: #c6d9ec;
-                                                                        display: flex;
-                                                                        align-items: center;
-                                                                        padding: 0 15px;
-                                                                    }
-                                                                    
-                                                                    header img {
-                                                                        width: 50px;
-                                                                        height: 50px;
-                                                                    }
-                                                                    
-                                                                    .hamburger {
-                                                                        display: flex;
-                                                                        width: 30px;
-                                                                        height: 30px;
-                                                                        flex-direction: column;
-                                                                        justify-content: space-between;
-                                                                        margin-right: 50px;
-                                                                    }
-                                                                    
-                                                                    .hamburger div {
-                                                                        width: 30px;
-                                                                        height: 5px;
-                                                                        background: #fff;
-                                                                    }
-                                                                    
-                                                                    nav {
-                                                                        display: none;
-                                                                    }
-                                                                    
-                                                                    nav a {
-                                                                        color: #fff;
-                                                                        text-decoration: none;
-                                                                        text-transform: uppercase;
-                                                                        margin-left: 20px;
-                                                                    }
-                                                                    /* main */
-                                                                    
-                                                                    h1 {
-                                                                        text-align: center;
-                                                                    }
-                                                                    
-                                                                    h1,
-                                                                    h2 {
-                                                                        font-family: Helvetica;
-                                                                        /* text-align: center; */
-                                                                    }
-                                                                    
-                                                                    p {
-                                                                        font-family: "Times New Roman", "Times", serif;
-                                                                    }
-                                                                    /*Big News*/
-                                                                    
-                                                                    .big-news {
-                                                                        padding: 20px;
-                                                                        display: flex;
-                                                                        flex-direction: column;
-                                                                    }
-                                                                    
-                                                                    .big-news-box1,
-                                                                    .big-news-box2 {
-                                                                        /* width: 90%;
-    height: 400px; */
-                                                                        border: 2px solid white;
-                                                                        padding: 30px;
-                                                                        margin: 20px;
-                                                                    }
-                                                                    
-                                                                    .big-news-box1 img {
-                                                                        width: 100%;
-                                                                    }
-                                                                    /* .big-news-box2 {
-    /* width: 90%;
-    height: 400px; */
-                                                                    /* border: 2px solid white;
-padding: 20px;
-margin: 20px; */
-                                                                    /*News Grid*/
-                                                                    
-                                                                    .other-news {
-                                                                        width: 100%;
-                                                                        height: auto;
-                                                                        padding: 20px;
-                                                                        display: flex;
-                                                                        flex-direction: column;
-                                                                        /* width: 100%;
-    max-width: 1100px; */
-                                                                    }
-                                                                    
-                                                                    .news-box {
-                                                                        /* width: 80%;
-    height: 300px; */
-                                                                        border: 2px solid white;
-                                                                        padding: 30px;
-                                                                        margin: 20px;
-                                                                    }
-                                                                    
-                                                                    .news-box img {
-                                                                        width: 100%;
-                                                                    }
-                                                                    /* media query for tablets  */
-                                                                    
-                                                                    @media screen and (min-width: 668px) {
-                                                                        header {
-                                                                            justify-content: space-between;
-                                                                        }
-                                                                        nav {
-                                                                            display: flex;
-                                                                            justify-content: flex-end;
-                                                                        }
-                                                                        .hamburger {
-                                                                            display: none;
-                                                                        }
-                                                                        .big-news {
-                                                                            display: flex;
-                                                                            flex-direction: row;
-                                                                        }
-                                                                        .other-news {
-                                                                            display: flex;
-                                                                            flex-direction: row;
-                                                                            flex-wrap: wrap;
-                                                                            justify-content: space-between;
-                                                                            margin: 5px;
-                                                                            /* flex-grow: 1; */
-                                                                        }
-                                                                        /* flex-wrap: wrap;
-        width: 25%;
-        flex-grow: 1; */
-                                                                        .big-news-box1 {
-                                                                            /* width: 45%;
-    height: 100 px; */
-                                                                            flex: 1;
-                                                                        }
-                                                                        .big-news-box2 {
-                                                                            /* width: 45%;
-    height: 100 px; */
-                                                                            flex: 2;
-                                                                        }
-                                                                        .news-box {
-                                                                            flex: 0 12%;
-                                                                            margin: 5px;
-                                                                        }
-                                                                    }
-                                                                    /* media query for desktops  */
-                                                                    
-                                                                    @media (min-width: 1025px) {}
-                                                                    /* .other-news{
-    justify-content: center; */
-                                                                    /*   .news-box {
-                                                                    width: 300px;
-        height: 100px; */
-                                                                    /* display: flex;
-        flex:
+Body {
+    /* background: #B0E0E6; */
+    background: #ecf2f7;
+    margin: 0;
+}
+
+#read_more {
+    display: none;
+}
+
+h1 {
+    margin-left: 100px;
+}
+
+header {
+    /* width: 100%; */
+    /* background: #B0C4DE; */
+    background: #c7d9e8;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100px;
+    padding: 0 20px;
+}
+
+
+/* header img {
+    width: 100px;
+    height: 100px;
+} */
+
+nav {
+    margin-right: 50px;
+}
+
+nav a {
+    color: #fff;
+    text-decoration: none;
+    text-transform: uppercase;
+    margin-left: 20px;
+}
+
+
+/* Big News section */
+
+.big-news {
+    /* width: 100%; */
+    height: auto;
+    display: flex;
+    /* margin: 50px; */
+    justify-content: center;
+    align-content: flex-start;
+}
+
+.big-news-box1 {
+    width: 40%;
+    /* height: auto; */
+    background: #dae6f0;
+    margin: 30px;
+    padding: 10px;
+    box-sizing: border-box;
+    /* flex-shrink: 1; */
+    box-shadow: 0 10px 10px #999;
+    transition: box-shadow 0.3s ease;
+    display: flex;
+}
+
+.big-news-box2 {
+    width: 60%;
+    /* height: auto; */
+    background: #dae6f0;
+    margin: 50px;
+    padding: 10px;
+    box-sizing: border-box;
+    /* flex: 3; */
+    box-shadow: 0 10px 10px #999;
+    transition: box-shadow 0.3s ease;
+}
+
+.big-news-box1 img {
+    max-height: 300px;
+    width: 100%;
+    /* align-self: center; */
+}
+
+
+/* Hover effect for the boxes */
+
+.big-news-box1:hover,
+.big-news-box2:hover,
+.news-box:hover {
+    box-shadow: 5px 10px 10px #999;
+}
+
+
+/* Other news section */
+
+.other-news {
+    width: 100%;
+    height: auto;
+    display: flex;
+    margin-top: 50px;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.news-box {
+    width: 20%;
+    height: auto;
+    background: #dae6f0E6;
+    margin: 20px;
+    padding: 10px;
+    box-sizing: border-box;
+    box-shadow: 0 10px 10px #999;
+    transition: box-shadow 0.3s ease
+}
+
+.news-box img {
+    height: 200px;
+    width: 100%;
+}
+
+.other-news h2 {
+    text-align: center;
+}
+
+@media screen and (max-width: 1024px) {
+    .news-box {
+        width: 40%;
+    }
+    header {
+        justify-content: space-around;
+    }
+}
+
+@media screen and (max-width:668px) {
+    .news-box {
+        width: 90%;
+    }
+    .big-news {
+        flex-direction: column;
+    }
+    .big-news-box1,
+    .big-news-box2 {
+        width: 90%;
+    }
+    nav {
+        font-size: 13px;
+    }
+}
