Final version, fixed a misspelling

--- a/code/style.css
+++ b/code/style.css
@@ -55,7 +55,7 @@ html {
     
   .logo {
     width: 100px;
-    height: 100ox;
+    height: 100px;
     margin: 20px;
     }
 
@@ -150,7 +150,7 @@ html {
     
   .logo {
     width: 100px;
-    height: 100ox;
+    height: 100px;
     margin: 20px;
   }  
   
@@ -219,7 +219,7 @@ html {
     
     .logo {
       width: 100px;
-      height: 100ox;
+      height: 100px;
       margin: 20px;
     }
 
