--- a/code/style.css
+++ b/code/style.css
@@ -13,10 +13,15 @@
 }
 
 body {
-  background: #fff8dc;
+  background: #6236FF;
   color: #000000;
-  font-family: backstreet;
+  font-family: "roboto mono", backstreet;
   margin: 0;
+}
+
+main{
+  background: #F8E1AA;
+  margin: 0 25px;
 }
 
 h2 {
@@ -28,25 +33,27 @@ h3 {
 }
 
 h4 {
-  text-align: center;
+  font-size: 20px;
+  /* text-align: center; */
 }
 
 /*** HEADER ***/
 
 header {
-  background: #9c5ace;
+  background: #6236FF;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 30px 20px;
+  padding: 30px 0px 30px 20px;
 }
 
 header img {
-  width: 180px;
+  width: 250px;
 }
 
 nav {
   display: none;
+  padding: 0 20px;
 }
 
 nav a {
@@ -57,16 +64,16 @@ nav a {
 
 .hamburger {
   display: flex;
-  width: 30px;
-  height: 30px;
+  width: 35px;
+  height: 35px;
   flex-direction: column;
   justify-content: space-between;
-  margin-right: 24px;
+  margin-right: 25px;
 }
 
 .hamburger div {
-  width: 30px;
-  height: 5px;
+  width: 35px;
+  height: 4px;
   background: #000;
   border-radius: 5px;
 }
@@ -79,7 +86,7 @@ nav a {
   width: 100%;
   max-width: 1100px;
   margin: 0 auto;
-  padding: 100px 16px;
+  padding: 16px;
 }
 
 .big-news img {
@@ -132,13 +139,13 @@ nav a {
 /*** ARTICLE NEWS GRID ***/
 
 .grid-wrapper {
-    margin: 16px;
+  margin: 16px;
 }
   
-  .grid-wrapper div {
-    width: 100%;
-    text-align: center;
-  }
+.grid-wrapper div {
+  width: 100%;
+  text-align: center;
+}
 
 .grid-articles {
   max-width: 1100px;
@@ -157,7 +164,52 @@ nav a {
 
 .grid-article a img {
   width: 80%;
+  height: auto;
   margin: 16px;
+}
+
+/*** POLAROID IMAGES ***/
+
+.item {
+  filter: grayscale(100%);
+}
+
+.polaroid {
+  background: white;
+  padding: 16px;
+  border: 1px solid white;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+
+.polaroid img {
+  max-width: 100%;
+  height: auto;
+}
+
+.item:nth-of-type(3n+1) {
+  transform: scale(0.8,0.8) rotate(-5deg);
+  transition: all 0.35s;
+}
+
+.item:nth-of-type(3n+2) {
+  transform: scale(0.8,0.8) rotate(5deg);
+  transition: all 0.35s;
+}
+
+.item:nth-of-type(3n+3) {
+  transform: scale(0.8,0.8) rotate(-3deg);
+  transition: all 0.35s;
+}
+
+.item:nth-of-type(3n+4) {
+  transform: scale(0.8,0.8) rotate(6deg);
+  transition: all 0.35s;
+}
+
+.item:hover {
+  filter: none;
+  transform: scale(1,1) rotate(0deg) !important;
+  transition: all 0.35s;
 }
 
 /*** MEDIA QUERIES ***/
