--- a/code/style.css
+++ b/code/style.css
@@ -51,18 +51,11 @@ header {
 
 nav {
   display: none;      
-  /* margin: 10px; */
   width: 80%;
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
 }
-
-/*
-nav div {
-  display: flex;
-  justify-content: space-between;
-} */
 
 .logo {
   width: 250px;
@@ -83,8 +76,8 @@ a {
   margin: 20px;
 }
 
-nav a:hover{
-  color: rgb(224, 243, 230);
+nav a:hover {
+  color: #3e5368;
 }
 
 /*  MAIN  */
@@ -125,6 +118,12 @@ main {
 h1 {
   font-size: 25px;
   margin: 20px 0px;
+}
+
+main a {
+  color: #69ac7d;
+  margin: 0px;
+  text-transform: none;
 }
 
 .articleText {
@@ -170,8 +169,6 @@ h1 {
   border-top: 2px solid  rgb(152, 192, 164);
   box-shadow: 10px 10px 10px  rgba(152, 192, 164,0.1);
   background: white;
- 
-  
 }
 
 .smallArticle img {
@@ -179,7 +176,6 @@ h1 {
   height: 200px;
   object-fit: cover;
 }
-
 
 h2 {
   font-size: 20px;
@@ -199,10 +195,7 @@ h3 {
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-evenly;
-
 }
-
-
 
 
 /*  FOOTER  */
@@ -211,7 +204,7 @@ footer {
   background: black;
   height: 100px;
   margin-top: 70px;
-  padding: 20px;
+  padding: 30px;
   display: flex;
   justify-content: center;
 }
@@ -239,6 +232,14 @@ footer {
 footer p {
   color: white;
   font-size: 13px;
+}
+
+footer a {
+  margin: 0px;
+}
+
+footer a:hover {
+  text-decoration: underline;
 }
 
 /*** PHONE ***/
@@ -298,7 +299,7 @@ footer p {
     align-items: center;
   }
 
-  .logo{
+  .logo {
    display: none;
 
   }
@@ -313,19 +314,6 @@ footer p {
     justify-content: space-between;
     
   }
-
-  nav div {
-    justify-content: space-evenly;
-  }
-/*
-  .logo {
-    position: absolute;
-  }*/
-/*
-  .header-content :nth-child(1) {
-    display: none;
-  }
-  */
 
   .smallArticle {
     width: 43%; 
@@ -354,16 +342,7 @@ footer p {
 
   nav {
     display: flex; 
-    width: 50%;
-  }
-
-  nav div a {
-    /* margin-left: 20px; */
-    padding: 0px;
-  }
-
-  nav div {
-    /* margin-left: 20px; */
+    width: 40%;
   }
 
   .logo {
@@ -378,6 +357,10 @@ footer p {
 
   nav :nth-child(3) {
     display: none;
+  }
+
+  nav a {
+    margin: 0px 5px 0px 20px;
   }
 
   /* MAIN */
@@ -439,10 +422,7 @@ footer p {
     animation-duration: 0.5s;
     animation-timing-function: ease;
     animation-fill-mode: forwards;
-
   }
-
-
 
   .bigArticle:hover{
     box-shadow: 18px 18px 10px rgba(119, 151, 129, 0.1);
