--- a/code/style.css
+++ b/code/style.css
@@ -194,12 +194,12 @@ h3 {
 
   .left {
     order: 0;
-    display: block;
+    display: flex;
   }
 
   .right {
     order: 2;
-    display: block;
+    display: flex;
   }
 
   nav {
