moved "asset" folder inside "code" tto deploy the site on Netlify

--- a/code/style.css
+++ b/code/style.css
@@ -75,7 +75,7 @@ color: black;
 .header__nav__item{
   padding:5px;
   font-size: 20px;
-  color: white;
+  color: black;
   font-family: 'Cormorant Garamond', serif;
   text-decoration: none;
 }
