--- a/code/style.css
+++ b/code/style.css
@@ -15,7 +15,6 @@ figure {
 
 .header {
   background-color:white;
-  color: black;
   border-bottom: 2px solid grey;
 }
 
@@ -27,6 +26,8 @@ figure {
   padding: 10px;
   font-family:'Cormorant Garamond', serif;
   text-decoration: none;
+  white-space:nowrap;
+  flex:1;
 }
 
 @media screen and (max-width: 900px){
@@ -37,7 +38,7 @@ figure {
 }
 
 .header__title:visited{
-color: black;
+text-decoration: black;
 }
 
 .header__title:hover{
@@ -57,7 +58,7 @@ color: black;
 }
 
 .header__social {
-  width: 25%
+  flex:1;
 }
 
 @media screen and (max-width: 900px){
@@ -68,24 +69,23 @@ color: black;
 
 .header__nav{
   text-align: center;
-  border: 1px solid black;
-  background-color:lightgrey;
-}
+  background-color: black;
+  }
 
 .header__nav__item{
   padding:5px;
   font-size: 20px;
-  color: black;
+  color: white;
   font-family: 'Cormorant Garamond', serif;
   text-decoration: none;
 }
 
 .header__nav__item:visited{
-  color: darkblue;
+  color: white;
 }
 
 .header__nav__item:hover{
-  color: purple;
+  text-decoration: underline;
 }
 
 .header__social__item__icon{
@@ -101,6 +101,7 @@ color: black;
 .header__actions{
   text-align: right;
   padding-right: 5px;
+  flex:1;
 }
 
 .header__actions__item{
@@ -191,6 +192,14 @@ color: black;
   list-style: none;
 }
 
+.Mostread__links a:visited{
+  color: darkblue;
+}
+
+.Mostread__links a:hover{
+  color: purple;
+}
+
 @media screen and (max-width: 600px){
   .Mostread__label{
     background-color: grey;
@@ -257,7 +266,7 @@ color: black;
   flex: 1;
   box-shadow: 5px 5px purple;
   text-decoration: none;
-  color: white;
+  color: blue;
   font-weight: bold;
   font-size: 18px;
   }
@@ -280,10 +289,10 @@ color: black;
   opacity: 0.5;
 }
 
-.discover__block:hover {
+.discover__text:hover {
   color: purple
 }
-.discover__block:visited {
+.discover__text:visited {
   color: darkblue;
 }
 .discover__text {
@@ -371,7 +380,7 @@ color: black;
 .footer{
   text-align: center;
   border-top: 2px grey solid;
-  margin: 30px;
+  margin-top: 30px;
   position: relative;
 }
 
